software-center (2.1.18.2) UNRELEASED; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/widgets/mkit.py:
    - fix crash during action_bar refresh (LP: #635044)
  * softwarecenter/backend/channel.py:
    - always display the partner channel, even if its
      source is not enabled (LP: #635003) 

  [ Kiwinote ]
  * data/software-center.menu.in:
    - fix typo to now use applications-ocaml icon, thanks mpt (LP: #635732)
  * softwarecenter/backend/channel.py:
    - allow 'for purchase' to have an icon in non-English locales (LP: #636242)
  * softwarecenter/db/application/py:
    - try to open deb file, except on any sort of error (LP: #633379)
  * softwarecenter/view/appdetailsview_gtk.py:
    - use the display name for app entry in 'where is it' (LP: #635464)
    - restore correct padding in addons status bar (LP: #625230)

  [ Matthew Paul Thomas ]
  * data/software-center.menu.in:
    - fix incorrect Category value in the xml for the Debugging
      subcategory of Developer Tools (LP: #538911)

  [ Colin Watson ]
  * Fix update-apt-xapian-index crashes when the Dir::Cache::pkgcache file
    doesn't exist (LP: #267330).

 -- Gary Lasker <gary.lasker@canonical.com>  Sun, 12 Sep 2010 17:03:44 -0400

software-center (2.1.18.1) maverick; urgency=low

  [ Colin Watson ]
  * Update tests/xapian_query.py for compatibility with Xapian 1.2.x.
  
  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - fix bug in removal (thanks to davmor2)
  * data/software-center.menu.in:
    - update icon names for latest additions from humanity (thanks
      to vish!

  [ Kiwinote ]
  * data/ui/SoftwareCenter.ui:
    - no more icon for software sources (LP: #634987)
  * softwarecenter/backend/aptd.py:
    - allow us to remove pkgs again (LP: #634929)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Sep 2010 20:32:48 +0200

software-center (2.1.18) maverick; urgency=low

  [ Michael Vogt ]
  * use "match.document" instead of "match[xapian.MSET_DOCUMENT]"